test/testdata/list/index_assignment_non_int_error.lox
var list = [];
list[2.5] = 0; // error: index (2.5) must be a non-negative integer
